fix navbar alignment; minor style fixes

--- a/src/components/LandingHeader/LandingHeader.css
+++ b/src/components/LandingHeader/LandingHeader.css
@@ -1,4 +1,4 @@
-.landing-header {
+.header {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
@@ -40,14 +40,14 @@
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	padding: 10px 30px 10px 30px;
+    justify-content: flex-end;
 }
 
 .social-buttons {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	padding-right: 30px;
+	padding-right: 20px;
 }
 
 .social-buttons a {
