--- a/src/components/LanguageSelect/LanguageSelect.css
+++ b/src/components/LanguageSelect/LanguageSelect.css
@@ -16,6 +16,7 @@
   padding: 0;
   flex-direction: column;
   position: absolute;
+  transform: translateX(-50%);
   background-color: #f9f9f9;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
@@ -28,11 +29,11 @@
   display: flex;
   align-items: center;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 15px;
   padding-top: 5px;
   padding-bottom: 5px;
   padding-left: 10px;
-  padding-right: 30px;
+  padding-right: 35px;
   min-width: 100px;
   border-radius: 6px;
 }
